# annasul

./: README.md  package-lock.json
.github/workflows/: deploy.yml
docs/: docs.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/abuild/: index.md
docs/assets/: index-5jr1_a3j.js  index-8rXQE7Gf.css  index-BiWN02Lr.css  index-CGN2NtoA.js  index-CLnr6paL.js  index-CwiJvxea.css  index-D-3IMO0p.css  index-DdefZvOr.js
docs/src/: App.vue  main.ts  vite-env.d.ts
docs/src/components/: Homepage.vue  Sidebar.vue
pages/: docs.md
rust/: Cargo.toml  rust-toolchain.toml  rustfmt.toml  test.aau
rust/abuild/: Cargo.toml  README.md
rust/abuild/src/: command.rs  lang.rs  lib.rs  main.rs
rust/annasul/: Cargo.toml
rust/annasul/src/: app.rs  lib.rs  marco.rs  os_impl.rs
rust/annasul/src/app/: apps.rs
rust/annasul/src/os_impl/: android.rs  desktop.rs  linux.rs
rust/annasul/src/os_impl/desktop/: app.rs
rust/annasul/src/os_impl/desktop/app/: apps.rs
rust/annasul/src/os_impl/desktop/app/apps/: rust.rs
rust/annasul/src/os_impl/desktop/app/apps/rust/: rustup.rs
rust/annasul/src/os_impl/ios/: app.rs
rust/annasul/src/os_impl/linux/: app.rs
rust/annasul_lang/: Cargo.toml
rust/annasul_lang/src/: codegen.rs  lexer.rs  lib.md  lib.rs  parser.rs
rust/annasul_lang/src/lexer/: comment.md  scanner.rs  token.rs
rust/annasul_lang/src/utils/: error.rs
