[workspace]
members = ["annasul"]
resolver = "3"
default-members = ["annasul"]
exclude = []

[workspace.package]
version = "0.0.1"
authors = ["yuanair@github.com"]
homepage = "https://github.com/yuanair/annasul"
keywords = ["annasul"]
license = "AGPL-3.0-only"
edition = "2024"
description = "User-friendly yet personalized tool library"
documentation = "https://docs.rs/annasul"

[workspace.dependencies]
