[package]
name = "abuild"
version.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
clap = { workspace = true, features = ["cargo", "derive", "unicode"] }
