[package]
name = "abuild"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
name = "abuild"
crate-type = ["rlib"]

[[bin]]
name = "abuild"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "*", features = ["cargo", "derive", "unicode"] }
clap_complete = "*"
colored = "*"