[package]
name = "annasul"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
name = "annasul"
crate-type = ["rlib"]

[[bin]]
name = "annasul"
path = "src/bin/main.rs"

[dependencies]
