[package]
name = "annasul"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true

[lib]
name = "annasul"
crate-type = ["rlib"]

[[bin]]
name = "annasul"
path = "src/bin/main.rs"
required-features = ["app-apps"]

[features]
app = []
app-apps = ["app"]

[dependencies]
tokio = { version = "1.*", features = [
    "process",
    "io-util",
    "rt",
    "macros",
    "rt-multi-thread",
] }
serde = { version = "1.*", features = ["derive"] }
log = { version = "*" }
reqwest = { version = "0.11", features = ["blocking"] }
env_logger = { version = "*" }
