[package]
name = "annasul_lang"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true

[features]
unstable = ["serde/unstable"]
unstable-f16 = ["unstable"]
unstable-f128 = ["unstable"]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.*", features = ["derive", "unstable"], optional = true }
